--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,21 +2,27 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.17
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: go build -o mikruscli -v ./...
+
+      - name: Archive production artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: mikruscli
+          path: |
+            mikruscli
