--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: 1.17
 
       - name: Build
-        run: go build -o mikruscli -v ./...
+        run: go build -o mikruscli -v .
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
